# BD2ModManager-Edit

./: .gitignore  README.md  index.html  log.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml
scripts/: download_modpreview.mjs
src/: App.css  App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/data/: characters.json  dating.json  npc.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  game.rs  migrate.rs  mod.rs  mods.rs  profiles.rs  updater.rs  utils.rs
src-tauri/src/config/: config.rs  mod.rs
src-tauri/src/game/: game.rs  installer.rs  mod.rs
src-tauri/src/migrate/: migrate.rs  mod.rs
src-tauri/src/mods/: conflict.rs  discover.rs  install.rs  metadata.rs  mod.rs  sync.rs  types.rs  utils.rs
src-tauri/src/profiles/: manager.rs  mod.rs  types.rs
src-tauri/src/update/: app.rs  game_data.rs  mod.rs  mod_preview.rs
src-tauri/src/updater/: app.rs  game_data.rs  mod.rs  mod_preview.rs
src-tauri/src/utils/: bundled_tools.rs  data.rs  files.rs  misc.rs  mod.rs  path.rs
src-tauri/windows/: hooks.nsh
src/components/: ConfirmationDialog.vue  Header.vue  Titlebar.vue
src/composables/: useAppDir.ts  useAppInit.ts  useDev.ts  useHeader.ts  useModInstall.ts  usePortable.ts  useSaveScroll.ts  useSymlinkElevation.ts  useSyncEvents.ts
src/data/: mods_index.json
src/locales/: en-US.json  ja-JP.json  ko-KR.json  pt-BR.json  zh-CN.json  zh-TW.json
src/plugins/: ConfirmPlugin.ts  ConfirmService.ts
src/stores/: BDXLogs.ts  characters.ts  logging.ts  mods.ts  modsIndex.ts  notification.ts  preferences.ts  profiles.ts  settings.ts  syncState.ts  themes.ts
src/styles/: main.css
src/utils/: dragAndDrop.ts  errors.ts  formatCharName.ts  sortMods.ts  timeOp.ts
(+83 files in other folders)
